--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,19 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
+    
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "https://phonepe.mycloudrepo.io/public/repositories/phonepe-intentsdk-android"
+        }
+    }
+}
+
+
 apply plugin: "com.facebook.react.rootproject"
+def enableProguardInReleaseBuilds = true
